# pirate-btcpay

./: .dockerignore  .gitignore  .gitmodules  404.html  Cargo.toml  README.md  Rocket.toml  common.css  index.html  index.json  index.xml  sitemap.xml
.github/workflows/: builder-server.yml  builder.yml  gh-pages.yml
api/: index.html  index.xml
api/accounts/: index.html
api/payment/: index.html
api/scan/: index.html
api/status/: index.html
categories/: index.html  index.xml
docker/: Dockerfile-server  Dockerfile-walletd  docker-compose.yml
docs/: config.toml
docs/content/: _index.md
docs/content/API/: _index.md  accounts.md  payment.md  scan.md  status.md
docs/content/installation/: _index.md  build.md  requirements.md  usage.md
docs/layouts/partials/: logo.html
docs/layouts/shortcodes/: img.html
installation/: index.html  index.xml
installation/requirements/: index.html
installation/usage/: index.html
tags/: index.html  index.xml
tests/: test.js
walletd/: Cargo.toml
walletd/proto/: compact_formats.proto  service.proto
walletd/src/: app.rs  chain.rs  config.rs  data.rs  db.rs  lib.rs  rpc.rs  wallet.rs
walletd/src/rpc/: data.rs
