[package]
name = "walletd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.zcash_client_backend]
path = "../librustzcash/zcash_client_backend"

[dependencies.zcash_primitives]
path = "../librustzcash/zcash_primitives"

[dependencies.zcash_proofs]
path = "../librustzcash/zcash_proofs"
