[package]
name = "walletd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "walletd"
path = "src/bin/pirate-walletd.rs"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
anyhow = "1.0.40"
thiserror = "1.0.25"
log = "0.4.14"
flexi_logger = {version="0.22.3", features = ["compress"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
lazy_static = "1.4.0"
lazycell = "1.3.0"
delegate = "0.7.0"

rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "^1.6", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.7"

tonic = { version = "0.4.3", features = ["tls", "tls-roots"] }
prost = "0.7"

rusqlite = "0.24.0"

hex = "0.4.3"

[dependencies.zcash_client_backend]
path = "../librustzcash/zcash_client_backend"

[dependencies.zcash_primitives]
path = "../librustzcash/zcash_primitives"

[dependencies.zcash_proofs]
path = "../librustzcash/zcash_proofs"

[build-dependencies]
tonic-build = "0.4.2"
